--- a/public/CSS/menu.css
+++ b/public/CSS/menu.css
@@ -29,7 +29,7 @@
     color:white;
     font-family: mangaFont;
     transition: all 0.4s ease;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
 }
 
 #main-menu > .container-fluid > .collapse>  .nav > li > a:before,
@@ -101,6 +101,10 @@
     {
         padding-right: 15px;
         padding-left: 15px;
+    }
+
+    #main-menu > .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
+        font-family: mplusregular;
     }
   }
 
