--- a/public/partials/mp_header.html
+++ b/public/partials/mp_header.html
@@ -20,47 +20,50 @@
 </div>
 
 <div ng-controller="mpHeaderController" class="row logo-header">
-    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
 
-    <div class="top-description col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0 ">
-
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding-right: 0px; padding-left: 0px;">
-            <div class="logos">
-                <img class="logo-img" src="../R/Metalplatelogo.jpg">
-                <img src="../R/title_logo.png">
-
-            </div>
-
-        </div>
-
-        <div class="right-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
-
-            <div class="row rc-row">
-                <div id="call-id" class="info-container col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <img src="../R/topsection/call.png" alt="Phone:">
-                    <div class="divider"></div>
-                    <div class="right-text">
-                        <h5>0125-23-3725</h5>
-                        <p>FAX 0125-23-2250</p>
-                    </div>
-                </div>
-
-                <div class="info-container col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <img ng-click="openNewTabLoc()" src="../R/topsection/ic_location.png" alt="Location">
-                    <div class="divider"></div>
-                    <div class="right-text">
-                        <h5 ng-click="openNewTabLoc()">北海道滝川市本町2丁目3番5号</h5>
-                        <p>ＴＳビル1階</p>
-
-                    </div>
-
-                </div>
-            </div>
-
+    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-10
+        col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
+        <div class="logos">
+            <img class="logo-img" src="../R/Metalplatelogo.jpg">
+            <img class="hidden-xs" src="../R/title_logo.png">
         </div>
     </div>
-    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
 
+    <div class="right-container col-lg-5 col-md-5 col-sm-5 col-xs-10
+    col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+
+        <div class="row rc-row">
+            <div id="call-id" class="info-container col-lg-6 col-md-6 col-sm-12 col-xs-12 hidden-sm hidden-xs">
+                <img src="../R/topsection/call.png" alt="Phone:">
+                <div class="divider"></div>
+                <div class="right-text">
+                    <h5>0125-23-3725</h5>
+                    <p>FAX 0125-23-2250</p>
+                </div>
+            </div>
+
+            <div class="info-container col-lg-6 col-md-6 col-sm-12 col-xs-12 hidden-sm hidden-xs">
+                <img ng-click="openNewTabLoc()" src="../R/topsection/ic_location.png" alt="Location">
+                <div class="divider"></div>
+                <div class="right-text">
+                    <h5 ng-click="openNewTabLoc()">北海道滝川市本町2丁目3番5号</h5>
+                    <p>ＴＳビル1階</p>
+
+                </div>
+
+            </div>
+
+            <div class="mobile-container hidden-lg hidden-md col-sm-8 col-xs-8">
+                <div class="center">
+                    <img src="../R/topsection/call.png" alt="Phone:">
+                    <div class="divider"></div>
+                    <img ng-click="openNewTabLoc()" src="../R/topsection/ic_location.png" alt="Location">
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
 
 <div class="row mp-menu">
