--- a/public/CSS/main_taniguchi_styles.css
+++ b/public/CSS/main_taniguchi_styles.css
@@ -1,13 +1,8 @@
 html,
 body {
-  width: 100%;
-  margin: 0;
-  position: relative;
-  background-color: #484845;
-}
-
-body .container{
-    padding: 0px;
+  background: #0F2027;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .row .thumbnail{
@@ -82,16 +77,16 @@ body footer{
     align-items: center;
 }
 
-body footer .container p{
+body footer p{
     color: #ECECEC;
 }
 
-body footer .container p span.owl{
+body footer p span.owl{
     color: #054F98;
     font-weight: bold;
 }
 
-body footer .container p span.blitz{
+body footer p span.blitz{
     color: #0FC121;
     font-weight: bold;
 }
