--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -21,43 +21,46 @@
 
     </div>
 
-    <div class="row">
-        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding:0px;">
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <div class="thumbnail">
-                    <div class="logo-container">
-                        <a href="#!/metalplatehome">
-                            <img src="../R/logos/1logo.png" alt="...">
-                        </a>
+    <div class="container">
+            <div class="row">
+                    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10
+                            col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+                        <div class="row">
+                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12
+                                ">
+                                    <div class="thumbnail">
+                                        <div class="logo-container">
+                                            <a href="#!/metalplatehome">
+                                                <img src="../R/logos/1logo.png" alt="...">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                    
+                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                    <div class="thumbnail">
+                                        <div class="logo-container">
+                                            <a href="#!/generalservice/home">
+                                                <img src="../R/logos/2logo.png" alt="...">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                    
+                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                    <div class="thumbnail">
+                                        <div class="logo-container">
+                                            <a>
+                                                <img src="../R/logos/3logo.png" alt="...">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <div class="thumbnail">
-                    <div class="logo-container">
-                        <a href="#!/generalservice/home">
-                            <img src="../R/logos/2logo.png" alt="...">
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <div class="thumbnail">
-                    <div class="logo-container">
-                        <img src="../R/logos/3logo.png" alt="...">
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <span class="col-lg-1 col-md-1 sm-1 hidden-xs"></span>
-
+            
     </div>
-
 
     <div class="row slider">
 
@@ -83,9 +86,12 @@
 
     </div>
 
-    <footer class="footer navbar navbar-default ">
-        <div class="container">
-            <p class="footer-block">COPYRIGHT © 2018. ALL RIGHTS RESERVED. CREATED BY <span class="owl">OWLINVENTION</span> && <span class="blitz">BLITZAR CORP.</span></p>
+    <footer class="footer navbar navbar-default navbar-bottom">
+        <div class="container-fluid">
+            <p class="footer-block">COPYRIGHT © 2018. ALL RIGHTS RESERVED. CREATED BY
+                <span class="owl">OWLINVENTION</span> &&
+                <span class="blitz">BLITZAR CORP.</span>
+            </p>
         </div>
 
     </footer>
